Use log4j for logging, rewrite some local dictionary parts